Ícone alterado para refletir melhor o app; Modificações nas notificações para impedir a criação de várias;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Game Utilities</string>
-    <string name="button_set_time">Set Time</string>
+    <string name="btnSetTime">Set Time</string>
     <string name="btnPlusHours">Plus Hours</string>
     <string name="btnMinusHours" >Minus Hours</string>
     <string name="txtSetTime">Set Time from Picker</string>
