--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="mainNotificationText">Expand and tap [Refill] to refill all lives</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
+    <string name="shortcutShort">Serviço</string>
+    <string name="shortcutLong">Atalho do Serviço Game Utilities</string>
+    <string name="shortcutDisabled">Atalho Desabilitado</string>
 </resources>
